[package]
name = "pgsql_zero"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8", "with-chrono-0_4"]}
tokio = {version = "0.2", features = ["rt-core", "macros"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rusoto_core = { version = "0.44.0", default_features=false, features=["rustls"] }
rusoto_dynamodb = { version="0.44.0", default_features=false, features=["rustls"] }
#serde_dynamodb = { version="0.5", path = "../serde_dynamodb/serde_dynamodb"}
#serde_dynamodb_derive = { version="0.1", path = "../serde_dynamodb/serde_dynamodb_derive" }
#dynamodb_data = { git = "https://github.com/rimutaka/dynamodb_data.git" }
dynomite = {version = "0.8.2", default-features = false, features = ["rustls"]}
